--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -18,7 +18,7 @@
                             authentic selves.</p><br>
                         <p>The mission of The Greatness Movement is to not just understand “why” things aren’t working,
                             but more importantly to understand “how” to change them and break the <a
-                                href="worst-day-cycle.html"> Worst Day Cycle.</a></p><br>
+                                routerLink="/worst-day-cycle"> Worst Day Cycle.</a></p><br>
 
                         <p>Kenny has a unique ability to see what everyone else has missed. He imparts immediate, deep
                             wisdom which generates innovative, transformative solutions to achieve rapid results while
@@ -38,8 +38,8 @@
                             these new skills and tools.</p>
 
                         <div class="button-row">
-                            <a class=" button" routerLink="/courses-details">Begin Here</a>
-                            <a class="button" routerLink="/courses-details">Start Your Journey</a>
+                            <a class=" button" routerLink="/courses" target="">Begin Here</a>
+                            <a class="button" href="https://direct.me/kennyweiss" target="_blank">Start Your Journey</a>
                         </div>
 
                     </div>
