--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -164,19 +164,31 @@
                                 </div>
 
                                 <div class="mainformfield">
-                                    <div class="flexfield">
-                                        <div class="group-form-field">
-                                            <label>First Name<span>*</span> </label>
-                                            <input type="text" class="customefields">
-                                        </div>
-                                        <div class="group-form-field">
-                                            <label>Email<span>*</span> </label>
-                                            <input type="text" class="customefields">
-                                        </div>
-                                    </div>
-                                    <div class="submitebut">
-                                        <button class="button">Submit</button>
-                                    </div>
+                                            <!-- ✅ Success message -->
+                        <div *ngIf="formSuccess" class="success-message">
+                        Thank you! Your message has been sent successfully.
+                        </div>
+                    <form *ngIf="!formSuccess" #contactForm="ngForm" (ngSubmit)="submitForm(form)">
+
+                        <div class="row">
+                            <input type="text" placeholder="First Name" name="name" [(ngModel)]="formData.name" required
+                                #name="ngModel" />
+                            <div *ngIf="(formSubmitted || name.touched) && name.invalid" class="error">First Name is required</div>
+                        </div>
+
+                        <div class="row my-2">
+                            <input type="email" placeholder="E-mail Address" name="email" [(ngModel)]="formData.email"
+                                required email #email="ngModel" />
+                            <div *ngIf="(formSubmitted || email.touched) && email.invalid" class="error">
+                                A valid Email is required
+                            </div>
+
+                            
+                        </div>
+ 
+
+                        <button class="button" type="submit">Send Message</button>
+                    </form>
                                 </div>
                             </div>
                         </div>
