--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -168,7 +168,7 @@
                         <div *ngIf="formSuccess" class="success-message">
                         Thank you! Your message has been sent successfully.
                         </div>
-                    <form *ngIf="!formSuccess" #contactForm="ngForm" (ngSubmit)="submitForm(form)">
+                    <form *ngIf="!formSuccess" #contactForm="ngForm" (ngSubmit)="submitFormresource()">
 
                         <div class="row">
                             <input type="text" placeholder="First Name" name="name" [(ngModel)]="formData.name" required
