--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -265,22 +265,36 @@
                                     email
                                     address and you will be directed immediately to the download.</p>
                             </div>
+                                <div *ngIf="formSuccessboundaries" class="success-message">
+                                        Thank you! Your message has been sent successfully.
+                                    </div>
+       <form *ngIf="!formSuccessboundaries" #contactForm="ngForm"
+                                        (ngSubmit)="submitFormBoundaries()">
+                                   <div class="flexfield"> 
+                                        <div class="group-form-field">
+                                            <label>First Name<span>*</span> </label>
+                                            <input type="text" placeholder="First Name"  class="customefields" name="name"
+                                                [(ngModel)]="formData.name" required #name="ngModel" />
+                                            <div *ngIf="(formSubmitted || name.touched) && name.invalid" class="error">
+                                                First Name is required</div>
+                                        </div>
 
-                            <div class="mainformfield">
-                                <div class="flexfield">
-                                    <div class="group-form-field">
-                                        <label>First Name<span>*</span> </label>
-                                        <input type="text" class="customefields">
-                                    </div>
-                                    <div class="group-form-field">
-                                        <label>Email<span>*</span> </label>
-                                        <input type="text" class="customefields">
-                                    </div>
-                                </div>
-                                <div class="submitebut">
-                                    <button class="button whitebt">Submit</button>
-                                </div>
-                            </div>
+                                        <div class="group-form-field">
+                                            <label>Email<span>*</span> </label>
+                                            <input type="email" placeholder="E-mail Address"  class="customefields" name="email"
+                                                [(ngModel)]="formData.email" required email #email="ngModel" />
+                                            <div *ngIf="(formSubmitted || email.touched) && email.invalid"
+                                                class="error">
+                                                A valid Email is required
+                                            </div>
+
+
+                                        </div>
+                                       </div>
+                                       <div class="submitebut">
+                                        <button class="button" type="submit">Send Message</button>
+                                        </div>
+                                    </form> 
                         </div>
                     </div>
 
