--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -268,7 +268,7 @@
                                 <div *ngIf="formSuccessboundaries" class="success-message">
                                         Thank you! Your message has been sent successfully.
                                     </div>
-       <form *ngIf="!formSuccessboundaries" #contactForm="ngForm"
+                                <form *ngIf="!formSuccessboundaries" #contactForm="ngForm"
                                         (ngSubmit)="submitFormBoundaries()">
                                    <div class="flexfield"> 
                                         <div class="group-form-field">
@@ -419,20 +419,38 @@
                                     reconnect to your authentic self. Complete this form for instant access.</p>
                             </div>
 
-                            <div class="mainformfield">
-                                <div class="flexfield">
-                                    <div class="group-form-field">
-                                        <label>First Name<span>*</span> </label>
-                                        <input type="text" class="customefields">
-                                    </div>
-                                    <div class="group-form-field">
-                                        <label>Email<span>*</span> </label>
-                                        <input type="text" class="customefields">
-                                    </div>
+                           <div class="mainformfield">
+                                <!-- ✅ Success message -->
+                                <div *ngIf="formSuccess" class="success-message">
+                                    Thank you! Your message has been sent successfully.
                                 </div>
-                                <div class="submitebut">
-                                    <button class="button whitebt">Submit</button>
-                                </div>
+                                <form *ngIf="!formSuccess" #contactForm="ngForm" (ngSubmit)="submitFormresource()">
+
+                                     <div class="flexfield"> 
+                                        <div class="group-form-field">
+                                            <label>First Name<span>*</span> </label>
+                                            <input type="text" placeholder="First Name"  class="customefields" name="name"
+                                                [(ngModel)]="formData.name" required #name="ngModel" />
+                                            <div *ngIf="(formSubmitted || name.touched) && name.invalid" class="error">
+                                                First Name is required</div>
+                                        </div>
+
+                                        <div class="group-form-field">
+                                            <label>Email<span>*</span> </label>
+                                            <input type="email" placeholder="E-mail Address"  class="customefields" name="email"
+                                                [(ngModel)]="formData.email" required email #email="ngModel" />
+                                            <div *ngIf="(formSubmitted || email.touched) && email.invalid"
+                                                class="error">
+                                                A valid Email is required
+                                            </div>
+
+
+                                        </div>
+                                       </div>
+                                       <div class="submitebut">
+                                        <button class="button" type="submit">Send Message</button>
+                                        </div>
+                                </form>
                             </div>
                         </div>
                     </div>
