--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -1,22 +1,30 @@
- <main class="mt">
-        <div class="contactsection">
-            <div class="container">
-                <div class="contact-into" >
-                    <h5 class="tag-line">Contact us</h5>
-                    <h3>Let’s Make Something <br>Great Together</h3>
+<main class="mt">
+    <div class="contactsection">
+
+        <div class="container">
+            <div class="contact-into">
+                <h5 class="tag-line">Contact us</h5>
+                <h3>Let’s Make Something <br>Great Together</h3>
+            </div>
+            <div class="contactflexform">
+                <div class="leftcontactimg">
+                    <img src="images/others-img2.png">
                 </div>
 
                 <div class="form">
-                        <!-- ✅ Success message -->
-                        <div *ngIf="formSuccess" class="success-message">
+
+
+
+                    <div *ngIf="formSuccess" class="success-message">
                         Thank you! Your message has been sent successfully.
-                        </div>
-                    <form *ngIf="!formSuccess" #contactForm="ngForm"(ngSubmit)="submitForm(contactForm)"> 
+                    </div>
+                    <form *ngIf="!formSuccess" #contactForm="ngForm" (ngSubmit)="submitForm(contactForm)">
 
                         <div class="row">
                             <input type="text" placeholder="First Name" name="name" [(ngModel)]="formData.name" required
                                 #name="ngModel" />
-                            <div *ngIf="(formSubmitted || name.touched) && name.invalid" class="error">First Name is required</div>
+                            <div *ngIf="(formSubmitted || name.touched) && name.invalid" class="error">First Name is
+                                required</div>
 
 
                             <input type="text" placeholder="Last Name" name="lastname"
@@ -43,6 +51,13 @@
 
                 </div>
             </div>
+
+        </div>
+
+
+
+        <div class="container">
+
 
             <div class="contact-boxesflex">
                 <div class="contacts-box">
@@ -75,14 +90,11 @@
 
 
             </div>
-            <div class="map">
-                <iframe src="https://www.google.com/maps?q=New+York,+USA&output=embed" allowfullscreen
-                    loading="lazy"></iframe>
-            </div>
         </div>
-
-
-
-
+        <div class="map">
+            <iframe src="https://www.google.com/maps?q=New+York,+USA&output=embed" allowfullscreen
+                loading="lazy"></iframe>
+        </div>
+    </div>
 
 </main>
